--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
 		"dev": "nodemon src/app.js"
 	},
 	"dependencies": {
+		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"mongoose": "^5.11.10"
 	},
