--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
 		"vuex": "^3.4.0"
 	},
 	"devDependencies": {
+		"@mdi/font": "^5.9.55",
 		"@vue/cli-plugin-router": "~4.5.0",
 		"@vue/cli-plugin-vuex": "~4.5.0",
 		"@vue/cli-service": "~4.5.0",
