--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
 	"dependencies": {
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"joi": "^17.4.2",
+		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.11.10"
 	},
 	"devDependencies": {
