--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,12 @@
 		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
+		"ejs": "^3.1.6",
 		"express": "^4.17.1",
 		"joi": "^17.4.2",
 		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^5.11.10"
+		"mongoose": "^5.11.10",
+		"nodemailer": "^6.7.2"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.6"
